# rag_course

./: README.md  main.py  pyproject.toml  requirements.txt
Document_Loaders/: basic_document_template.ipynb  basic_text_loader_splitter.ipynb
Document_Loaders/data/text_files/: clinical_guideline_sample.txt
